# glipho

./: .gitignore  README.md  steps.toml  steps2.toml  steps3.toml
crates/cli/: Cargo.toml
crates/cli/src/: clap.rs  interactive.rs  main.rs
crates/gui/: Cargo.toml  Dioxus.toml  build.rs  tailwind.css
crates/gui/assets/: tailwind.css
crates/gui/assets/styling/: main.css
crates/gui/src/: main.rs
crates/gui/src/components/: footer.rs  header.rs  main.rs  mod.rs  step.rs
crates/gui/src/pages/: home.rs
crates/gui/src/ui/: mod.rs
crates/gui/ui/: app.slint  counter.slint
crates/lib/: Cargo.toml
crates/lib/src/: layer.rs  lib.rs  step.rs
crates/lib/src/image/: layer_implementations.rs  mod.rs
crates/tui/: Cargo.toml  LICENSE  README.md
crates/tui/src/: app.rs  event.rs
crates/tui/src/ui/: mod.rs
