[package]
name = "gui"
version = "0.1.0"
authors = ["cyprich <cypooriginal@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7.9", features = [] }
lucide-dioxus = { version = "3.23.0", features = ["all-icons"] }
lib = { path = "../lib" }

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
