[package]
name = "tui"
version = "0.1.0"
description = "Terminal User Interface for glipho"
authors = ["cyprich <cypooriginal@gmail.com>"]
license = "MIT"
edition = "2024"

[dependencies]
crossterm = "0.28.1"
ratatui = "0.30.0"
color-eyre = "0.6.3"
lib = { path = "../lib/" }

# Read the optimization guideline for more details: https://ratatui.rs/recipes/apps/release-your-app/#optimizations
[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
